1.26.0
------

TODO: avoid MPG123_NEED_MORE from non-feed reader reading frame
      bodies or see it as a feature
TODO: Figure out terminal printout encoding for Windows.
TODO: Fix up --quiet: either all errors or none, I guess errors should
      still be shown, but only fatal ones (no junk in the beginning stuff)
TODO: Make libout123 and/or mpg123 use that to convert on the fly. Optionally?
      A new incompatible version of libmpg123 would drop duplicate code for
      conversions …

- Starting to intentionally use C99 in the codebase. API headers are still
  supposed to be compatible to C89.
- There is a make check target now that tests some text transformations.
  It is an open question how that should be developed in relation to the
  external regression and compliance test suite. Maybe some really small
  example streams and decode tests will follow.
- AUTORS now in UTF-8;-)
- CMake build files in ports/cmake, as an alternative to create MSVC
  project files and the like (thanks to Vitaly Kirsanov)
- Default build with proper integer rounding (--enable-int-quality) now.
- Cygwin/midipix autoconf fixes (thanks to Redfoxmoon).
- Rework library dependency handling to avoid unnecessary linking for
  lib*123. Also add proper Libs.private to .pc files to enable static
  usage (especially on Windows with shlwapi).
- Updated support for OS/2 in the form of ArcaOS.
- Removed outdated Pascal port (ports/mpg123_.pas). There are others
  out there.
- mpg123:
-- Now sets non-zero exit code when any one track of the playlist
   fails to either produce at least one frame of playback, if there
   is data that should produce such (i.e. /dev/zero is bad, /dev/null is
   fine). See man page for details.
-- Print out MPEG header info for each frame for mpg123 -vvvv.
-- Added --no-visual to disable cursor/inverse video games explicitly.
-- Filter control/non-printable characters from metadata printout, reduce